--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = dd1f3e25
+	base = bd3b5d37
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = dd1f3e25
