--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = db1a1bb8
+	base = 5e653221
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = db1a1bb8
