--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 04e81c56
+	base = f9f9d14f
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 04e81c56
