--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = c870069c
+	base = 31905c91
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = c870069c
