--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 3c531bd2
+	base = 9e3571f5
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = 3c531bd2
