--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 3b2a82e0
+	base = 5003de68
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 3b2a82e0
