--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 1ff5b8a1
+	base = bdc9a01b
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 1ff5b8a1
