--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 724ef141
+	base = 5731f9cb
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 724ef141
