--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = bd24d5c0
+	base = 47fb8a13
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = bd24d5c0
