--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a7996cae
+	base = 0d8c5dac
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = a7996cae
