--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 73c35700
+	base = 38caeeba
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 73c35700
