--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = b5869c96
+	base = 69bcad02
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = b5869c96
