--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 60edd95f
+	base = 5b65df17
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 60edd95f
