--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 02546840
+	base = 69b42b5a
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = 02546840
