--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 361e6027
+	base = ad470d58
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 361e6027
