--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = d93e7713
+	base = 681d07b1
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = d93e7713
