--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a08c535f
+	base = 4fbdb50a
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = a08c535f
