--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a1c4e7c4
+	base = 27649d1a
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = a1c4e7c4
