--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 4cd90d2c
+	base = 4e10a2c0
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 4cd90d2c
