--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 8f4afe1f
+	base = 66630231
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 8f4afe1f
