--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 29bf71b5
+	base = 124b86cc
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 29bf71b5
