--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 1640829d
+	base = 0705908a
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 1640829d
