--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 0d83329c
+	base = 1dd262e8
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 0d83329c
