--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = ee96e0bf
+	base = 37645d6d
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = ee96e0bf
