--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = cb4195e0
+	base = 5e3cce1f
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = cb4195e0
