--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = ec392afc
+	base = 4c795373
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = ec392afc
