--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = f89b28f6
+	base = 40808271
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = f89b28f6
