--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 050508c2
+	base = a9d6f140
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 050508c2
