--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 77919774
+	base = a1e74d75
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 77919774
