--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 15348280
+	base = 11bd1734
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = 15348280
