--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 3ef74828
+	base = e2272826
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = 3ef74828
