--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 7e159501
+	base = 17802c5f
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 7e159501
