--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a3f68e00
+	base = 7a2b73e5
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = a3f68e00
