--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 62aec4d0
+	base = bc4f2efe
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 62aec4d0
