--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 948b186f
+	base = e8b24730
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 948b186f
