--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = c6634e90
+	base = 12444bad
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = c6634e90
