--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = f8f294ab
+	base = f484fe9d
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = f8f294ab
