--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a1fafe6b
+	base = 1c7dd6bb
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = a1fafe6b
