--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 2350fbed
+	base = 48b795b8
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 2350fbed
