--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 54267f94
+	base = 573fea28
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = 54267f94
