--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 527dbb37
+	base = 16074665
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 527dbb37
