--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 432ebbc7
+	base = b49981ad
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 432ebbc7
