--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 99c077b4
+	base = 1d67d2f9
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = 99c077b4
