--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = a0133cbc
+	base = 1f48b1b8
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = a0133cbc
