--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 729efc5c
+	base = ee959a8e
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 729efc5c
