--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 14d16637
+	base = f6365ebe
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 14d16637
