--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = ecdd219a
+	base = b83cbfdf
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = ecdd219a
