--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 77858c45
+	base = e1c94406
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 77858c45
