--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = d31e7011
+	base = e9b12fa4
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = d31e7011
