--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 64f72b78
+	base = 831fe7cc
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 64f72b78
