--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 37b53171
+	base = 929dba64
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = 37b53171
