--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 67d578c6
-	base = 356f29d6
+	base = 3ea8de0a
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 356f29d6
