--- a/mrpt_libros_bridge/package.xml
+++ b/mrpt_libros_bridge/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>mrpt_libros_bridge</name>
   <!-- Before updating version number, read [MRPT_ROOT]/version_prefix.txt first -->
-  <version>2.14.3</version>
+  <version>2.14.4</version>
   <description>Mobile Robot Programming Toolkit (MRPT) libraries (ros2bridge C++ library).
   This package contains: mrpt-ros2bridge
   </description>
@@ -27,7 +27,7 @@
   <build_depend>pkg-config</build_depend>
   <build_depend>zlib</build_depend>
 
-  <!-- More build deps that are not actually required by this ROS package, but we need them for the mrpt/config.h to reflect we have such feature -->
+  <!-- More build deps than are actually required by this ROS package, but we need them for the mrpt/config.h to reflect we have such feature -->
   <build_depend>libjpeg</build_depend>  <!-- To ensure no built-in version is used -->
   <build_depend>glut</build_depend>
   <build_depend>libglfw3-dev</build_depend>
