--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = b9446f53
+	base = d835865a
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = b9446f53
