--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 44e42d0b
+	base = f32310fb
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 44e42d0b
