--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = fc97901a
+	base = d171f125
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = fc97901a
