--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = d6f390f4
+	base = 5b8e5020
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = d6f390f4
