--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 44a1d5d0
+	base = 47954098
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = 44a1d5d0
