--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 6a5e7d8f
+	base = b91afc15
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 6a5e7d8f
