--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 964dc899
+	base = 1abf4b76
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 964dc899
