--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 8fdfe4d3
+	base = 18f9226a
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 8fdfe4d3
