--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = eecc905d
+	base = 3c6bf7b8
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = eecc905d
