--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 773cda18
+	base = ac278e5f
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 773cda18
