--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 75067888
+	base = c5b29491
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 75067888
