--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = f5efae35
+	base = 73b14b2c
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = f5efae35
