--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 8384e105
+	base = cde87c8c
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 8384e105
