--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = a3a96ef4
+	base = 3fff274a
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = a3a96ef4
