--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = e66e70f4
+	base = e0c4027d
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = e66e70f4
