--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = f1870c65
+	base = e68a2462
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = f1870c65
