--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = f5f589d9
+	base = 20cb2897
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = f5f589d9
