--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = a5657555
+	base = 56562a11
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = a5657555
