--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 82524042
+	base = ab3636c1
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 82524042
