--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = bc19cf76
+	base = 20219af1
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = bc19cf76
