--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = ee97627e
+	base = 5b86c80a
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = ee97627e
