--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 6b3fee7e
+	base = 4028261f
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 6b3fee7e
