--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 1a639331
+	base = 3969f583
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 1a639331
