--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 8fbc9989
+	base = 67939f55
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 8fbc9989
