--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = bd36db4d
+	base = 8d89276a
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = bd36db4d
