--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = d21687ea
+	base = 0332fcfd
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = d21687ea
