--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = f3af9f4a
+	base = 40b13c0c
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = f3af9f4a
