--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 97741e75
+	base = 43967a13
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 97741e75
