--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 5ad9fb67
+	base = 9e46a6bf
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 5ad9fb67
