--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 54ae65c6
+	base = fdad3f91
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = 54ae65c6
