--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = dd6069ee
+	base = 74488684
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = dd6069ee
