--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 61087e25
+	base = 1f2bd7b1
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 61087e25
