--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 0668bc9c
+	base = 1988e88b
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 0668bc9c
