--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 27f4d77a
+	base = 9e1a2d3d
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 27f4d77a
