--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = eb97b218
+	base = 4fe2c256
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = eb97b218
