--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 0d8d0f25
+	base = c0c8b5f3
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 0d8d0f25
