--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 177e7583
+	base = 2628d6aa
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 177e7583
