--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 6cb8784a
+	base = a6c68812
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = 6cb8784a
