--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = e9126222
+	base = 001a8eb6
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = e9126222
