--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = d5989d2e
+	base = 39302410
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = d5989d2e
