--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = a18d3c96
+	base = 5145ff5e
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = a18d3c96
