--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 7029157d
+	base = a509e209
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 7029157d
