--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = b40211e3
+	base = 085e9c64
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = b40211e3
