--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 92103e23
+	base = a7941757
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = 92103e23
