--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = c224b7e2
+	base = 17cf4481
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = c224b7e2
