--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 46d353bb
+	base = 1aef8c0c
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 46d353bb
