--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = c718724d
+	base = 1b018ff2
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = c718724d
