--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 377d37f8
+	base = 0c272988
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 377d37f8
