--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 8f60a70a
+	base = f2b80631
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 8f60a70a
