--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 9900e5b8
+	base = 468ef085
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 9900e5b8
