--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 445476fc
+	base = b009c173
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = 445476fc
