--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 53fc5c0d
-	base = 280d0cb3
+	base = 1f3636a0
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 280d0cb3
