--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 8fc109dd
+	base = d775f1f7
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = 8fc109dd
