--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 11c01104
+	base = 8d432159
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 11c01104
