--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 376223cd
+	base = 8e4a4f65
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 376223cd
