--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 0163c586
+	base = bc2c1b2f
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = 0163c586
