--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = d79fb8c8
+	base = 0b9a4a1a
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = d79fb8c8
