--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 5ecb7a36
+	base = 4c9d45b1
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 5ecb7a36
