--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = a0e1123a
+	base = 30668578
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = a0e1123a
