--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = b9171eff
+	base = 559bf9ae
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = b9171eff
