--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 9f26ab7c
+	base = aee4f480
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 9f26ab7c
