--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = a5cf2e18
+	base = e9cf773c
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = a5cf2e18
