--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 26fe7a97
+	base = e7977da8
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 26fe7a97
