--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 310fe7da
+	base = 65c79b9c
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = 310fe7da
