--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c
-	base = 1cdab156
+	base = c4e7154b
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 1cdab156
