--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 46e86fbae
+	base = cc1142f41
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = 46e86fbae
