--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 1608d333b
+	base = dcfe257d4
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 1608d333b
