--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = ff7dc925f
+	base = 130b69671
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = ff7dc925f
