--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 30b8b1587
+	base = 9f9b49a0e
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = 30b8b1587
