--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = ab06862be
+	base = a5e264caf
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = ab06862be
