--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 0f7bbf675
+	base = 4bea596c0
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 0f7bbf675
