--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = b2f007c54
+	base = 53919d9cd
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = b2f007c54
