--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = b300c679d
+	base = f52bfd031
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = b300c679d
