--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 00a30d551
+	base = ab6162b9e
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 00a30d551
