--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 71803a188
+	base = 9c9ad1ba1
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 71803a188
