--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 5d6823be4
+	base = 8abc46360
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = 5d6823be4
