--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = a4adfdeba
+	base = 014c196df
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = a4adfdeba
