--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = ee97f2431
+	base = 2289aed09
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = ee97f2431
