--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 1e36a3dc9
+	base = b96ffb5ba
 	trim = mrpt_libnav
-	trimbase = 
+	trimbase = 1e36a3dc9
