--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 58672ff66
+	base = c3e04eafa
 	trim = mrpt_libposes
-	trimbase = 
+	trimbase = 58672ff66
