--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 0496e88ca
+	base = 68e6213ae
 	trim = mrpt_libhwdrivers
-	trimbase = 
+	trimbase = 0496e88ca
