--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = f62ea81a5
+	base = beae177ee
 	trim = mrpt_libobs
-	trimbase = 
+	trimbase = f62ea81a5
