--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 277c8a368
+	base = bfb725ce7
 	trim = mrpt_libopengl
-	trimbase = 
+	trimbase = 277c8a368
