--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 4de00625d
+	base = 56a0c9341
 	trim = mrpt_apps
-	trimbase = 
+	trimbase = 4de00625d
