--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 014923d4b
+	base = 7abf0da2d
 	trim = mrpt_libmaps
-	trimbase = 
+	trimbase = 014923d4b
