--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 0d6ffc1f3
+	base = f687d7dc3
 	trim = mrpt_libtclap
-	trimbase = 
+	trimbase = 0d6ffc1f3
