--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 53c4ef879
+	base = 612bd34c3
 	trim = mrpt_libslam
-	trimbase = 
+	trimbase = 53c4ef879
