--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 20fdbe9f4
+	base = 4d389e198
 	trim = mrpt_libapps
-	trimbase = 
+	trimbase = 20fdbe9f4
