--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = a2551b67a
+	base = ee37de162
 	trim = mrpt_libmath
-	trimbase = 
+	trimbase = a2551b67a
