--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 060c9d0b1
+	base = d2e166706
 	trim = mrpt_libgui
-	trimbase = 
+	trimbase = 060c9d0b1
