--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e07760c4
-	base = 3fb68fe2a
+	base = deb5ae91e
 	trim = mrpt_libbase
-	trimbase = 
+	trimbase = 3fb68fe2a
